--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,7 @@
 
     <form id="fill-form">
       <label for="delay-input">Delay (dalam ms)</label> <br>
-      <input id="delay-input" name="delay-input" placeholder="Durasi Delay">
+      <input id="delay-input" type="number" min="2000" name="delay-input" value="2000" step="100">
   
       <button id="btn-run">Isi EDOM</button>
     </form>
